# multi-store-hub

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc.json  ASP_NET_SYNC.md  DEPLOYMENT.md  README.md  UPDATE.md  docker-compose.yml  package.json  pnpm-lock.yaml  products_variable_fixed_cleaned.xlsx
integrations/aspnet-product-sync/: README.md
integrations/aspnet-product-sync/Nop.Plugin.Misc.MultiStoreHub/: MultiStoreHubPlugin.cs  MultiStoreHubSettings.cs  Nop.Plugin.Misc.MultiStoreHub.csproj  plugin.json
integrations/aspnet-product-sync/Nop.Plugin.Misc.MultiStoreHub.Tests/: HubHmacTests.cs  Nop.Plugin.Misc.MultiStoreHub.Tests.csproj
integrations/aspnet-product-sync/discovery/: README.md
integrations/woocommerce-price-sync/: .env.example  README.md  pyproject.toml  test_debug.xlsx
integrations/woocommerce-price-sync/data/: descriptions-report.xlsx  web-research-cache.json
integrations/woocommerce-price-sync/src/woocommerce_price_sync/: __init__.py  cli.py  config.py  description_product.py  description_product_data.py  excel.py  excel_fix.py  generate_descriptions.py  matching.py  models.py  normalization.py  progress.py  report.py  sync.py  web_research.py  woo.py
integrations/woocommerce-price-sync/tests/: test_description_product.py  test_excel.py  test_excel_fix.py  test_matching.py  test_normalization.py  test_report.py  test_sync.py  test_web_research.py  test_woo.py
scripts/: deploy-vps-resume.sh  deploy-vps.sh  export-aspnet-catalog.sh  inspect-aspnet-backup.sh  setup-domain.sh
(+7 files in other folders)
